	* ilu_rotate.c: Changed min/max calls to IL_MIN/IL_MAX.
	* ilut_states.c (ilutSetInteger): Fixed ILUT_MAXTEX_DEPTH call and added checks around first
	  three calls for Param >= 1.
	
2009-02-01 Matěj Týč <bubla@sf.net>
	* test/format_test: Tweaked the script to use wine if cross-compiling
	to run the tests, extended testil capabilities
	* m4/devil-definitions.m4: Fixed bugs that caused that you couldn't
	disable support for some formats no matter what :-)
	* m4/devil-api-checks.m4: Added Xrender build support (by Jesse Maurais)

2009-02-02 Denton Woods <doomwiz@users.sf.net>
	* il_manip.c (ilCopyPixels):311: Added check for destination format of color index.
	* il_convbuff.c (ilConvertBuffer): Changed to accept the source image palette.  Added code to
	  convert from buffers that are related to a palette before the large switch.
	* il_alloc.c (ifree): Changed so that if Ptr == NULL, it does not try to free the pointer.
	* il_nvidia.cpp/il_squish.cpp: Added empty functions if nVidia or libsquish support is not
	  compiled in.
	* test/format_test/testil.c:5: Added _USE_MATH_DEFINES.

2009-02-03 Denton Woods <doomwiz@users.sf.net>
	* il_io.c: Updated Doxygen comments.
	* il_fits.c: Added this file (not in any projects yet).
	* il_fits.c: Wrote beginning of FITS loading code.

2009-02-04 Denton Woods <doomwiz@users.sf.net>
	* ilut_opengl.c:160: Changed checks to see if less than 0.
	* il_fits.c: Got this reading FITS files properly.

2009-02-05 Denton Woods <doomwiz@users.sf.net>
	* il_tga.c: Fixed bug loading malformed RLE Targa images.
	* il_rle.c:20: Changed size_t cast to ILint to resolve compiler warning.
	* il.def: Added definitions.
	* Updated version numbers to 1.7.7 everywhere.

2009-02-06 Denton Woods <doomwiz@users.sf.net>
	* README.win and README.unix: Updated with Cygwin/MinGW instructions.
	
2009-02-06 Matěj Týč <bubla@sf.net>
	* configure.ac, lib/Makefile.am: Added explicit linking with libm
	library + fixed the ilut_x11.c file conditions of compilation