@@ -12,9 +12,21 @@
 //-----------------------------------------------------------------------------
 
 // Required include files.
+#ifdef HAVE_CONFIG_H
+#include "config.h"
+#endif /* HAVE_CONFIG_H */
+
 #include <IL/il.h>
-#include <IL/ilu.h>
 #include <stdio.h>
+
+/* We would need ILU just because of iluErrorString() function... */
+/* So make it possible for both with and without ILU!  */
+#ifdef ILU_ENABLED
+#include <IL/ilu.h>
+#define PRINT_ERROR_MACRO printf("Error: %s\n", iluErrorString(Error))
+#else /* not ILU_ENABLED */
+#define PRINT_ERROR_MACRO printf("Error: 0x%X\n", (unsigned int)Error)
+#endif /* not ILU_ENABLED */
 
 ILboolean ILAPIENTRY LoadFunction(const char *FileName)
 {
@@ -53,8 +65,7 @@ int main(int argc, char **argv)
 	}
 
 	// Check if the shared lib's version matches the executable's version.
-	if (ilGetInteger(IL_VERSION_NUM) < IL_VERSION ||
-		iluGetInteger(ILU_VERSION_NUM) < ILU_VERSION) {
+	if (ilGetInteger(IL_VERSION_NUM) < IL_VERSION) {
 		printf("DevIL version is different...exiting!\n");
 		return 2;
 	}
@@ -101,7 +112,7 @@ int main(int argc, char **argv)
 
 	// Simple Error detection loop that displays the Error to the user in a human-readable form.
 	while ((Error = ilGetError())) {
-		printf("Error: %s\n", iluErrorString(Error));
+		PRINT_ERROR_MACRO;
 	}
 
 	return 0;
